--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,1 +1,9 @@
 <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore, est?</span>
+<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis dicta inventore quam asperiores velit eum maiores veritatis. Totam, repellendus modi!</span>
+<ul>
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+</ul>
+
+<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus doloremque perspiciatis aperiam magnam, corporis harum nobis consequuntur, aspernatur similique molestias officiis et ipsa a pariatur sunt cumque repellat dolor placeat.</div>
