--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -5,5 +5,6 @@
   <li>2</li>
   <li>3</li>
 </ul>
+<h2>Lorem ipsum dolor.</h2>
 
 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus doloremque perspiciatis aperiam magnam, corporis harum nobis consequuntur, aspernatur similique molestias officiis et ipsa a pariatur sunt cumque repellat dolor placeat.</div>
