create part revolitonary

--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -11,3 +11,6 @@ $cardBtn: #776b79;
 $cardPrimeHeader: #3f2c41;
 $cardPrimeBody: #473249;
 $cardPrimeBtn: #635164;
+$title-revol: #635C73;
+$bg-color-grey: #F4F4F4;
+$border-active: .1rem solid rgba(27,31,35,.15);
