--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,1 +1,16 @@
-<p>header</p>
+<div class="container header">
+  <a href="#" class="header__logo">
+    <img src="/assets/icons/Logo 1.png" alt="logo" class="header__logo-img">
+    <h1 class="header__logo-name">ForkIO</h1>
+  </a>
+  <div class="header__actions">
+    <nav class="menu">
+      <a href="#" class="menu__item">Overview</a>
+      <a href="#" class="menu__item">About Fork</a>
+      <a href="#" class="menu__item">Buying Options</a>
+      <a href="#" class="menu__item">Support</a>
+    </nav>
+    <a href="#" class="header__btn btn__purchase">Buy Now</a>
+  </div>
+
+</div>
