--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,46 @@
 @import "./partials/core";
 
+.about {
+  position: relative;
+  padding-top: 10.81rem;
+  padding-bottom: 5.6rem;
+  -webkit-box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
+  -moz-box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
+  box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
+
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/img/testmonials-bg-1.jpg");
+    background-position: center;
+    background-size: cover;
+  }
+
+  .section-title,
+  .container {
+    position: relative;
+    z-index: 10;
+    margin-bottom: 8.2rem;
+  }
+}
+
+.section-title {
+  font-weight: bold;
+  font-size: 4.8rem;
+  color: #FFFFFF;
+  text-align: center;
+  font-family: "Montserrat";
+}
+
+.testimonials {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(31.5rem, 1fr));
+  grid-template-rows: repeat(2, 1fr);
+  gap: 11.6rem 8.7rem;
+  justify-items: center;
+}
