--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -1,20 +1,79 @@
-.hero-bg{
-  height: calc(100vh - 5.8rem);
+.hero-bg {
+  position: relative;
+  height: 90vh;
   width: 100%;
-  background-image: url("/assets/img/header.png");  
-  background-position: center;
-  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/img/header.png");
+    background-position: center;
+    background-size: cover;
+  }
+
+  * {
+    z-index: 10;
+  }
 }
 
-.hero{
-  padding-top: 11.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  flex-grow: 1;
+.hero {
+  margin-top: 11.5rem;
+  height: 100%;
 
+  &__content {
+
+    align-items: center;
+    text-align: center;
+  }
+
+  &__content-heading {
+    font-size: 8.2rem;
+    color: #FFFFFF;
+    font-weight: bold;
+    margin-bottom: 1.9rem;
+  }
+
+  &__content-text {
+    font-size: 3rem;
+    color: $lavender-purple;
+    margin-bottom: 1.9rem;
+  }
+
+  &__content-subtext {
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    color: $oslo-gray;
+  }
+
+  &__btn {
+    position: absolute;
+    bottom: -2rem;
+    right: 50%;
+    transform: translateX(50%);
+    display: block;
+    color: #FFFFFF;
+    padding: 1.3rem 3.1rem;
+    background-color: $lavender-purple;
+    border-radius: 3rem;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 2.1rem;
+  }
+
+  &__trial {
+    display: block;
+    text-align: center;
+    margin-top: 4.8rem;
+    font-weight: normal;
+    font-size: 1.4rem;
+    color: $oslo-gray;
+  }
 }
