--- a/src/scss/partials/_what-you-get.scss
+++ b/src/scss/partials/_what-you-get.scss
@@ -1,36 +1,77 @@
 .get{
+  //overflow-x: hidden;
   background-color: $bg-color-grey;
+  padding-top: 10rem;
+  padding-bottom: 3.3rem;
+  padding-left: 9rem;
+  &__wrab-header{
+
+    //display: flex;
+    //flex-direction: column;
+    @media (max-width:1130px) {
+      width: 100%;
+     display: flex;
+      justify-content: flex-end;
+    }
+  }
+  &__wrap{
+    display: flex;
+    justify-content: space-between;
+    @media (max-width:1130px) {
+      flex-wrap: wrap;
+    }
+  }
   &__title{
     font-weight: bold;
     font-size: 4.8rem;
     color: $lavender-purple;
+    &--left{
+      @media (max-width:1130px) {
+        display: none;
+      }
+    }
+    &--top{
+      display: none;
+      @media (max-width:1130px) {
+        display: block;
+      }
+    }
   }
   &__img{
     width: 70rem;
   }
   &__content-wrap{
-    display: flex;
+    display: grid;
     flex-direction: column;
+
   }
   &__content-item{
-    display: flex;
-    width: 52.5rem;
-
-    margin-top: 3.4rem;
+    display: grid;
+    grid-template-columns: 11.5rem 1fr;
+    grid-column-gap: 2.4rem;
+    //width: 52.5rem;
+    margin-bottom: 3.4rem;
 
   }
   &__content-img-wrap{
-    width: 10rem;
-    margin-right: 2.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &__content-img{
-
+    vertical-align: middle;
+    display: inline-block;
+    text-align: center;
   }
-
+  &__content-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
   &__content-title{
+    margin-bottom: 1.1rem;
     font-size: 1.6rem;
     color: $mine-shaft;
-
   }
   &__content-disc{
     font-size: 1.4rem;
