--- a/src/templates/what-you-get.html
+++ b/src/templates/what-you-get.html
@@ -1,5 +1,6 @@
 <section class="get">
-    <div class="container">
+    <div class=" get__wrap">
+        <h2 class="get__title get__title--top">&lt;Here is what you get&gt;</h2>
         <div class="get__content-wrap">
             <article class="get__content-item">
                 <div class="get__content-img-wrap">
@@ -40,7 +41,7 @@
             </article>
         </div>
         <div class="get__wrab-header">
-            <h2 class="get__title">&lt;Here is what you get&gt;</h2>
+            <h2 class="get__title get__title--left">&lt;Here is what you get&gt;</h2>
             <img src="assets/img/editor%201.png" alt="editor" class="get__img">
         </div>
     </div>
