--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -3,14 +3,14 @@
   <div class="container">
     <div class="testimonials">
       <div class="testimonials__item">
-        <img scr="/assets/icons/logo1.png" class="testimonials__item-logo" />
+        <img src="/assets/icons/logo1.png" class="testimonials__item-logo" />
         <p class="testimonials__item-text">
           Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna
           et pulvinar venenatis.
         </p>
       </div>
       <div class="testimonials__item">
-        <img scr="/assets/icons/logo2.png" class="testimonials__item-logo" />
+        <img src="/assets/icons/logo2.png" class="testimonials__item-logo" />
         <p class="testimonials__item-text">
           Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend
           nibh.
@@ -24,14 +24,14 @@
         </p>
       </div>
       <div class="testimonials__item">
-        <img scr="/assets/icons/logo4.png" class="testimonials__item-logo" />
+        <img src="/assets/icons/logo4.png" class="testimonials__item-logo" />
         <p class="testimonials__item-text">
           Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna
           et pulvinar venenatis.
         </p>
       </div>
       <div class="testimonials__item">
-        <img scr="/assets/icons/logo5.png" class="testimonials__item-logo" />
+        <img src="/assets/icons/logo5.png" class="testimonials__item-logo" />
         <p class="testimonials__item-text">
           Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat
           faucibus.
@@ -44,6 +44,10 @@
           vestibulum.
         </p>
       </div>
+    </div>
+    <div class="about__description">
+      <p class="about__description-text">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+      <hr class="about__description-line">
     </div>
   </div>
 </section>
