--- a/src/templates/hero.html
+++ b/src/templates/hero.html
@@ -5,6 +5,6 @@
     <p class="hero__content-subtext">v. 2.8 For Mac and Windows</p>
   </div>
   <div class="hero__action">
-    <a href="#" class="hero__btn btn__download">Download For Free Now</a>
+    <a href="#" class="hero__btn btn__prime">Download For Free Now</a>
   </div>
 </section>
