--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  // z-index: 2;
 
   &::before {
     content: "";
@@ -17,11 +18,10 @@
     background-image: url("/assets/img/header.png");
     background-position: center;
     background-size: cover;
+    z-index: -1;
   }
 
-  * {
-    z-index: 10;
-  }
+
 }
 
 .hero {
@@ -29,7 +29,6 @@
   height: 100%;
 
   &__content {
-
     align-items: center;
     text-align: center;
   }
@@ -72,6 +71,7 @@
     display: block;
     text-align: center;
     margin-top: 4.8rem;
+    margin-bottom: 3.3rem;
     font-weight: normal;
     font-size: 1.4rem;
     color: $oslo-gray;
