add modile part

--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -13,4 +13,5 @@ $cardPrimeBody: #473249;
 $cardPrimeBtn: #635164;
 $title-revol: #635C73;
 $bg-color-grey: #F4F4F4;
+$bg-color-prise:  #463048;
 $border-active: .1rem solid rgba(27,31,35,.15);
