--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -1,4 +1,5 @@
 <section class="price">
+    <div class="price__blur">
     <div class="container price__wrap">
         <p class="price__title">Fork Subscription Pricing</p>
         <div class="price__card card">
@@ -28,5 +29,6 @@
 
             </div>
         </div>
+    </div>
     </div>
 </section>
