--- a/src/scss/partials/_mixin.scss
+++ b/src/scss/partials/_mixin.scss
@@ -2,3 +2,8 @@
   padding: 0.5rem 0.7rem;
   font-size: 1.5rem;
 }
+
+@mixin uppercase-center-text {
+  text-align: center;
+  text-transform: uppercase;
+}
