--- a/src/scss/partials/_pricing.scss
+++ b/src/scss/partials/_pricing.scss
@@ -1,17 +1,16 @@
 .price{
-  //overflow: hidden;
   background: linear-gradient(45deg, rgba(74,49,79,0.8), rgba(74,49,79, 0.8)), url(/../assets/img/bg-prise.png) no-repeat;
-  //background: url(/../assets/img/bg-prise.png) no-repeat;
-
+  position: relative;
   background-size: cover;
+  background-position:  center center ;
   padding-top: 8.8rem;
   padding-bottom: 9rem;
-  @media (max-width:648px) {
+  @media (max-width: 648px) {
     padding-bottom: 3rem;
     padding-top: 1.4rem;
+    background: $bg-color-prise;
   }
   &__title{
-    z-index: 100;
     font-weight: bold;
     font-size: 4.8rem;
     text-align: center;
@@ -61,8 +60,7 @@
   }
   &__title{
     font-size: 2.4rem;
-    text-align: center;
-    text-transform: uppercase;
+    @include uppercase-center-text;
     color: $white;
     background: rgba(255,255 ,255,0.06);
     padding: 3.6rem 0;
@@ -70,8 +68,7 @@
   }
   &__prise{
     font-size: 6rem;
-    text-align: center;
-    text-transform: uppercase;
+    @include uppercase-center-text;
     color: $white;
     font-weight: bold;
     &:after{
@@ -86,8 +83,7 @@
     margin-top: 2rem;
     display: block;
     font-size: 1.4rem;
-    text-align: center;
-    text-transform: uppercase;
+    @include uppercase-center-text;
   }
 
   &__disc{
@@ -102,8 +98,7 @@
     background: rgba(255,255 ,255,0.15);
     border-radius: 2.5rem;
     font-size: 1.5rem;
-    text-align: center;
-    text-transform: uppercase;
+    @include uppercase-center-text;
     color: $white;
     padding: 1.5rem 3.7rem;
   }
