--- a/src/scss/partials/_what-you-get.scss
+++ b/src/scss/partials/_what-you-get.scss
@@ -1,12 +1,21 @@
 .get{
   background-color: $bg-color-grey;
   padding: 10rem 0 3.3rem 9rem;
+  display: flex;
+  justify-content: space-between;
   @media (max-width:1130px) {
     padding-left: 0;
+    justify-content: center;
+    flex-wrap: wrap;
   }
-  @media (max-width:768px) {
+  @media (max-width:992px) {
+
     background-color: transparent;
   }
+  @media (max-width:480px) {
+    padding-top: 0;
+  }
+
   &__wrab-header{
     @media (max-width:1130px) {
       width: 100%;
@@ -14,15 +23,7 @@
       justify-content: flex-end;
     }
   }
-  &__wrap{
-    display: flex;
-    justify-content: space-between;
 
-    @media (max-width:1130px) {
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-  }
   &__title{
     text-align: center;
     font-weight: bold;
@@ -39,10 +40,10 @@
         margin-bottom: 5rem;
         display: block;
       }
-      @media (max-width:768px) {
+      @media (max-width:992px) {
         font-size: 4.2rem;
       }
-      @media (max-width:436px) {
+      @media (max-width:480px) {
         font-size: 3.2rem;
       }
     }
@@ -52,25 +53,20 @@
   }
   &__content-wrap{
     display: grid;
-    flex-direction: column;
     @media (max-width:1130px) {
       margin: 0 auto;
       padding: 0 10px;
       max-width: 90.5rem;
     }
-
   }
   &__content-item{
     display: grid;
     grid-template-columns: 11.5rem 1fr;
     grid-column-gap: 2.4rem;
     margin-bottom: 3.4rem;
-    @media (max-width:436px) {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    @media (max-width:480px) {
+      @include item-center (align-items);
     }
-
   }
   &__content-img-wrap{
     display: flex;
@@ -82,12 +78,10 @@
     display: inline-block;
     text-align: center;
   }
-  &__content-text{
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    @media (max-width:436px) {
+  &__content-text{
+    @include item-center (justify-content);
+    @media (max-width:480px) {
       align-items: center;
     }
   }
@@ -95,14 +89,14 @@
     margin-bottom: 1.1rem;
     font-size: 1.6rem;
     color: $mine-shaft;
-    @media (max-width:436px) {
+    @media (max-width:480px) {
       margin-top: 2.7rem;
     }
   }
   &__content-disc{
     font-size: 1.4rem;
     color:$oslo-gray;
-    @media (max-width:436px) {
+    @media (max-width:480px) {
       text-align: center;
     }
   }
