--- a/src/scss/partials/_revolutionary.scss
+++ b/src/scss/partials/_revolutionary.scss
@@ -10,10 +10,10 @@
     font-size: 5.4rem;
     text-transform: uppercase;
     color: $title-revol;
-    @media (max-width: 768px) {
+    @media (max-width: 992px) {
     font-size: 4.2rem;
     }
-    @media (max-width: 394px) {
+    @media (max-width: 480px) {
       font-size: 2.6rem;
     }
   }
@@ -33,22 +33,20 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  @media (max-width: 768px) {
+  @media (max-width: 992px) {
     margin-top: 2.4rem;
   }
-  @media (max-width: 394px) {
-    margin-top: 3.4rem;
+  @media (max-width: 480px) {
+    margin-top: 0;
   }
   &__item{
     margin-right: 1rem;
     display: flex;
     border-radius: 0.3rem;
     border: $border-active;
+    margin-top: 2rem;
     &:last-child{
       margin-right: 0;
-      @media (max-width: 394px) {
-        margin-top: 2rem;
-      }
     }
   }
  &__link{
