--- a/src/scss/partials/_revolutionary.scss
+++ b/src/scss/partials/_revolutionary.scss
@@ -1,14 +1,11 @@
 .revolution{
   margin-top: 6rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include item-center(align-items);
   margin-bottom: 7rem;
   &__title{
-    text-align: center;
     font-weight: bold;
     font-size: 5.4rem;
-    text-transform: uppercase;
+    @include uppercase-center-text;
     color: $title-revol;
     @media (max-width: 992px) {
     font-size: 4.2rem;
