--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -1,5 +1,5 @@
 <section class="price">
-    <div class="container price__wrap">
+    <div class="container">
         <p class="price__title">Fork Subscription Pricing</p>
         <div class="price__card card">
             <div class="card__item">
