--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  // z-index: 2;
 
   &::before {
     content: "";
@@ -20,13 +19,12 @@
     background-size: cover;
     z-index: -1;
   }
-
-
 }
 
 .hero {
   margin-top: 11.5rem;
   height: 100%;
+
 
   &__content {
     align-items: center;
@@ -38,18 +36,22 @@
     color: #FFFFFF;
     font-weight: bold;
     margin-bottom: 1.9rem;
+    font-family: $primeFont;
   }
 
   &__content-text {
     font-size: 3rem;
     color: $lavender-purple;
     margin-bottom: 1.9rem;
+    font-family: $primeFont;
+    font-weight: 200;
   }
 
   &__content-subtext {
     font-size: 1.6rem;
     text-transform: uppercase;
     color: $oslo-gray;
+    font-family: $primeFont;
   }
 
   &__btn {
@@ -65,6 +67,8 @@
     text-decoration: none;
     font-weight: bold;
     font-size: 2.1rem;
+    text-align: center;
+    min-width: 29rem;
   }
 
   &__trial {
@@ -75,5 +79,48 @@
     font-weight: normal;
     font-size: 1.4rem;
     color: $oslo-gray;
+    font-family: $primeFont;
+  }
+}
+
+@media (max-width: 882px) {
+  .hero {
+    margin-top: 6.9rem;
+  }
+}
+
+@media (max-width: 420px) {
+  .hero {
+    margin-top: 5rem;
+
+    &__btn {
+      font-size: 1.5rem;
+    }
+
+    &__content-heading {
+      font-size: 4.8rem;
+    }
+
+    &__content-text {
+      font-size: 1.8rem;
+      line-height: 2.4rem;
+    }
+
+    &__content-subtext {
+      font-size: 1.4rem;
+    }
+
+    &__trial {
+      margin-top: 3.55rem;
+      font-size: 1.4rem;
+    }
+  }
+}
+
+@media (min-width: 421px) and (max-width: 670px) {
+  .hero {
+    &__btn {
+      font-size: 1.5rem;
+    }
   }
 }
