--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -12,3 +12,13 @@ $cardPrimeHeader: #3f2c41;
 $cardPrimeBody: #473249;
 $cardPrimeBtn: #635164;
 $salt-box: #645766;
+$purple: #4b3b4e;
+
+
+
+// Typography
+
+$primeFont: "Montserrat",
+sans-serif;
+$secondFont: "Lato",
+sans-serif;
