--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,12 +3,20 @@
     <div class="header__logo-img"></div>
     <h2 class="header__logo-name">ForkIO</h2>
   </a>
-    <nav class="menu">
-      <a href="#" class="menu__item">Overview</a>
-      <a href="#" class="menu__item">About Fork</a>
-      <a href="#" class="menu__item">Buying Options</a>
-      <a href="#" class="menu__item">Support</a>
-    </nav>
-    <a href="#" class="menu__btn--toggle"></a>
-    <a href="#" class="header__btn btn__prime">Buy Now</a>
+  <nav class="menu">
+    <a href="#" class="menu__item">
+      <span>Overview</span>
+    </a>
+    <a href="#" class="menu__item">
+      <span>About Fork</span>
+    </a>
+    <a href="#" class="menu__item">
+      <span>Buying Options</span>
+    </a>
+    <a href="#" class="menu__item">
+      <span>Support</span>
+    </a>
+  </nav>
+  <a href="#" class="menu__btn--toggle"></a>
+  <a href="#" class="header__btn btn__prime">Buy Now</a>
 </div>
