--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
   -webkit-box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
   -moz-box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
   box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
+  background-color: $purple;
 
   &::before {
     content: "";
@@ -19,6 +20,7 @@
     background-image: url("/assets/img/testmonials-bg-1.jpg");
     background-position: center;
     background-size: cover;
+
   }
 
   .section-title {
@@ -26,18 +28,20 @@
     z-index: 10;
     margin-bottom: 8.2rem;
   }
-  .container{
+
+  .container {
     position: relative;
     z-index: 10;
   }
 
-  &__description{
+  &__description {
     position: relative;
     margin: 0 auto;
     z-index: 10;
     max-width: 88.7rem;
   }
-  &__description-text{
+
+  &__description-text {
     font-family: Lato;
     font-style: normal;
     font-weight: normal;
@@ -46,12 +50,14 @@
     color: $mountain-mist;
     text-align: center;
     margin-bottom: 18.5px;
+    font-family: $secondFont;
   }
-  &__description-line{
+
+  &__description-line {
     border: 0;
     background-color: $salt-box;
     max-width: 78rem;
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     height: 0.2rem;
   }
@@ -65,18 +71,18 @@
   font-family: "Montserrat";
 }
 
-// 
-// TODO: create mixin
-// 
 .testimonials {
-  @include grid(3, 31.5rem, 11.6rem, 8.7rem);
-  justify-items: center;
+  @include grid(3, 31.5rem, 8.7rem, 0);
+  justify-content: space-between;
   margin-bottom: 118.5px;
-  @media (max-width: 115rem) {
-    @include grid(false, 31.5rem, 11.6rem, 8.7rem);
+
+  @media (max-width: 992px) {
+    @include grid(false, 31.5rem, 5.8rem, 0);
+    justify-content: space-evenly;
   }
 
-  &__item{
+
+  &__item {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,7 +91,7 @@
   }
 
 
-  &__item-text{
+  &__item-text {
     color: #FFFFFF;
     text-align: center;
     font-family: Lato;
@@ -93,6 +99,54 @@
     font-weight: bold;
     font-size: 1.6rem;
     line-height: 2.4rem;
+    font-family: $secondFont;
   }
 
+}
+
+@media (max-width: 720px) {
+  .about {
+    &::before {
+      height: 55%;
+    }
+
+    .section-title {
+      margin-bottom: 5.3rem;
+      font-size: 3.6rem;
+      line-height: 4.8rem;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .about {
+    &__description {
+      max-width: 25.1rem;
+    }
+
+    &__description-line {
+      max-width: 24.5rem;
+    }
+  }
+
+  .testimonials {
+    @include grid(false, 29rem, 4.5rem, 0);
+    justify-content: center;
+    margin-bottom: 3.7rem;
+
+    &__item {
+
+      img {
+        display: block;
+        margin-bottom: 2.2rem;
+      }
+    }
+
+    &__item-text {
+      font-size: 1.6rem;
+      line-height: 2.4rem;
+      text-align: center;
+    }
+  }
 }
