--- a/src/scss/partials/_mixin.scss
+++ b/src/scss/partials/_mixin.scss
@@ -1,17 +1,23 @@
 // TODO: FIX MEDIA 
-@mixin grid ($count, $min, $gapX, $gapY){
+@mixin grid ($count, $min, $gapX, $gapY) {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   gap: $gapX $gapY;
-  @if $count == false{
-    @media (max-width: 115rem) {
-      grid-template-columns: repeat(auto-fit, minmax($min, 1fr));
+  justify-content: center;
+
+  @if $count==false {
+    @media (max-width: 992px) {
+      grid-template-columns: repeat(auto-fit, $min);
     }
-  } @else{
-    @media (min-width: 116rem)  {
-      grid-template-columns: repeat($count, minmax($min, 1fr));
+
+    @media (max-width: 480px) {
+      grid-template-columns: repeat(1, $min);
     }
   }
-  
 
+  @else {
+    @media (min-width: 993px) {
+      grid-template-columns: repeat($count, $min);
+    }
+  }
 }
