bugs fixed ready to deploy

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -3,42 +3,54 @@
   <div class="container">
     <div class="testimonials">
       <div class="testimonials__item">
-        <img src="/assets/icons/logo1.png" class="testimonials__item-logo" />
+        <div class="testimonials__item-logo">
+          <img src="assets/icons/logo1.png" alt="logo1" />
+        </div>
         <p class="testimonials__item-text">
           Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna
           et pulvinar venenatis.
         </p>
       </div>
       <div class="testimonials__item">
-        <img src="/assets/icons/logo2.png" class="testimonials__item-logo" />
+        <div class="testimonials__item-logo">
+          <img src="assets/icons/logo2.png" alt="logo2" />
+        </div>
         <p class="testimonials__item-text">
           Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend
           nibh.
         </p>
       </div>
       <div class="testimonials__item">
-        <img src="/assets/icons/logo3.png" class="testimonials__item-logo" />
+        <div class="testimonials__item-logo">
+          <img src="assets/icons/logo3.png" alt="logo3" />
+        </div>
         <p class="testimonials__item-text">
           In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus
           auctor felis ac vehicula.
         </p>
       </div>
       <div class="testimonials__item">
-        <img src="/assets/icons/logo4.png" class="testimonials__item-logo" />
+        <div class="testimonials__item-logo">
+          <img src="assets/icons/logo4.png" alt="logo3" />
+        </div>
         <p class="testimonials__item-text">
           Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna
           et pulvinar venenatis.
         </p>
       </div>
       <div class="testimonials__item">
-        <img src="/assets/icons/logo5.png" class="testimonials__item-logo" />
+        <div class="testimonials__item-logo">
+          <img src="assets/icons/logo5.png" alt="logo4" />
+        </div>
         <p class="testimonials__item-text">
           Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat
           faucibus.
         </p>
       </div>
       <div class="testimonials__item">
-        <img src="/assets/icons/logo6.png" class="testimonials__item-logo" alt="">
+        <div class="testimonials__item-logo">
+          <img src="assets/icons/logo6.png" alt="logo6" />
+        </div>
         <p class="testimonials__item-text">
           Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et
           vestibulum.
