--- a/src/scss/partials/_about.scss
+++ b/src/scss/partials/_about.scss
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/img/testmonials-bg-1.jpg");
+    background-image: url("../assets/img/testmonials-bg-1.jpg");
     background-position: center;
     background-size: cover;
 
@@ -84,8 +84,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    min-height: 14.4rem;
+    justify-content: flex-start;
+    min-height: 15.2rem;
   }
 
 
@@ -98,6 +98,11 @@
     font-size: 1.6rem;
     line-height: 2.4rem;
     font-family: $secondFont;
+  }
+
+  &__item-logo {
+    height: 6.4rem;
+    margin-bottom: 2rem;
   }
 
 }
