--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -12,7 +12,7 @@
 
     &:hover {
       .header__logo-img {
-        background-image: url("/assets/icons/logo-hover 1.png");
+        background-image: url("../assets/icons/logo-hover1.png");
       }
 
       .header__logo-name {
@@ -25,7 +25,7 @@
     margin-right: 1.7rem;
     width: 4.3rem;
     height: 4.1rem;
-    background-image: url("/assets/icons/Logo 1.png");
+    background-image: url("../assets/icons/Logo 1.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -123,7 +123,7 @@
 
       &__btn--toggle {
         display: block;
-        background-image: url("/assets/icons/hamburger.svg");
+        background-image: url("../assets/icons/hamburger.svg");
         background-repeat: no-repeat;
         width: 2.6rem;
         height: 2.6rem;
@@ -131,7 +131,7 @@
       }
 
       &__btn--toggle.btn--toggle-active {
-        background-image: url("/assets/icons/times.svg");
+        background-image: url("../assets/icons/times.svg");
 
       }
 
@@ -163,6 +163,7 @@
           display: inline-block;
           position: relative;
           padding-left: 3.5rem;
+          font-weight: normal;
         }
 
         &:first-child {
