--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -14,7 +14,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/img/header.png");
+    background-image: url("../assets/img/header.png");
     background-position: center;
     background-size: cover;
     z-index: -1;
@@ -99,6 +99,7 @@
 
     &__content-heading {
       font-size: 4.8rem;
+
     }
 
     &__content-text {
