fixed box shadow

--- a/src/scss/partials/_about.scss
+++ b/src/scss/partials/_about.scss
@@ -2,9 +2,6 @@
   position: relative;
   padding-top: 10.81rem;
   padding-bottom: 5.6rem;
-  -webkit-box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
-  -moz-box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
-  box-shadow: inset 0px -76px 11px -11px rgba(74, 59, 78, 0.9);
   background-color: $purple;
 
   &::before {
@@ -18,7 +15,9 @@
     background-image: url("../assets/img/testmonials-bg-1.jpg");
     background-position: center;
     background-size: cover;
-
+    -webkit-box-shadow: inset 0 -140px 41px -11px rgba(74, 59, 78, 0.9);
+    -moz-box-shadow: inset 0 -140px 41px -11px rgba(74, 59, 78, 0.9);
+    box-shadow: inset 0 -140px 41px -11px rgba(74, 59, 78, 0.9);
   }
 
   .section-title {
@@ -110,7 +109,7 @@
 @media (max-width: 720px) {
   .about {
     &::before {
-      height: 55%;
+      height: 60%;
     }
 
     .section-title {
