--- a/src/scss/partials/_pricing.scss
+++ b/src/scss/partials/_pricing.scss
@@ -1,5 +1,5 @@
 .price {
-  background: linear-gradient(45deg, rgba(75, 59, 78, 0.8), rgba(75, 59, 78, 0.8)), url(/../assets/img/bg-prise.png) no-repeat;
+  background: linear-gradient(45deg, rgba(75, 59, 78, 0.8), rgba(75, 59, 78, 0.8)), url(../assets/img/Layer21.png) no-repeat;
   background-size: cover;
   background-position: center center;
   padding-top: 8.8rem;
