change bg in prising

--- a/src/scss/partials/_pricing.scss
+++ b/src/scss/partials/_pricing.scss
@@ -1,5 +1,5 @@
 .price {
-  background: linear-gradient(45deg, rgba(75, 59, 78, 0.3), rgba(75, 59, 78, 0.1)), url(../assets/img/Layer21.png) no-repeat;
+  background: url(../assets/img/Layer21.png) no-repeat;
   background-size: cover;
   background-position: center center;
   padding-top: 8.8rem;
