--- a/src/scss/partials/_mixin.scss
+++ b/src/scss/partials/_mixin.scss
@@ -14,7 +14,7 @@
   $direction: center;
 }
 
-// TODO: FIX MEDIA 
+
 @mixin grid ($count, $min, $gapX, $gapY) {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
@@ -23,7 +23,7 @@
 
   @if $count==false {
     @media (max-width: 992px) {
-      grid-template-columns: repeat(auto-fit, $min);
+      grid-template-columns: repeat(2, 1fr);
     }
 
     @media (max-width: 480px) {
