--- a/src/scss/partials/_what-you-get.scss
+++ b/src/scss/partials/_what-you-get.scss
@@ -53,10 +53,15 @@
   }
 
   &__img {
-    width: 70%;
+    width: 100%;
+  }
+  &__img-wrap {
+    display: flex;
+    justify-content: flex-end;
   }
 
   &__content-wrap {
+    width: 50%;
     display: grid;
     @media (max-width:992px) {
       margin: 0 auto;
