--- a/src/scss/partials/_reset.scss
+++ b/src/scss/partials/_reset.scss
@@ -90,6 +90,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* make sure to set some focus styles for accessibility */
