--- a/src/scss/partials/_what-you-get.scss
+++ b/src/scss/partials/_what-you-get.scss
@@ -64,9 +64,9 @@
     width: 50%;
     display: grid;
     @media (max-width:992px) {
+      width: 100%;
       margin: 0 auto;
-      padding: 0 10px;
-      //max-width: 90.5rem;
+      padding: 0 20px;
     }
   }
 
